try scriptit flaskiin

--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -1,11 +1,11 @@
 <html>
-	<head>
-		<title>Request Example</title>
-	</head>
-	<body>
-		<form method="POST" action="/user">
-			User : <input type="text" name="userform">
-			<input type="submit">
-		</form>
-	</body>
+  <head>
+    <title>Request Example</title>
+  </head>
+  <body>
+    <form method="POST" action="/search">
+      User to search for : <input type="text" name="searchform" />
+      <input type="submit" />
+    </form>
+  </body>
 </html>
