--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -3,7 +3,7 @@
     <title>Request Example</title>
   </head>
   <body>
-    <form method="POST" action="/search">
+    <form method="POST" action="/json">
       User to search for : <input type="text" name="searchform" />
       <input type="submit" />
     </form>
